more cleaning and update lang file